<resources>
    <!-- Strings used for App Name -->
    <string name="app_name" translatable="false">BlueHarvest</string>


    <!-- Strings used for Page Titles -->
    <string name="accessibilityPageTitle">Accessibility Settings</string>
    <string name="configurationPageTitle">Configuration Settings</string>
    <string name="displayedValuesCardTitle">Display Values</string>
    <string name="safetyOperationalSettingsCardTitle">Safety and Operational Settings</string>


    <!-- Strings used for Home Page -->

    <string name="recordTitle">Record</string>
    <string name="clearNotificationsButton">Clear Notifications</string>


    <!-- Strings used for Accessibility Settings Card-->

    <string name="textSizeTitle">Text Size</string>
    <string name="languageTitle">Language</string>
    <string name="unitSystemTitle">Unit System</string>
    <string name="colorSchemeTitle">Color Scheme</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>

    <string-array name="languageArray">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="colorSchemeArray">
        <item>Light</item>
        <item>Dark</item>
        <item>Color Blind</item>
    </string-array>


    <!-- Strings used for Displayed Values Settings Card-->

    <string name="maxRPMDisplayedTitle">Max RPM Displayed</string>
    <string name="maxHeightDisplayedTitle">Max Height Displayed</string>
    <string name="optimalRPMRangeTitle">Optimal RPM Range</string>
    <string name="optimalHeightRangeTitle">Optimal Height Range</string>
    <string name="connectedSensorTitle">Connected Sensors</string>
    <string name="maxDisplayValuesTitle">Max Display Values</string>
    <string name="optimalRangeValuesTitle">Optimal Range Values</string>
    <string name="plusMinusSign" translatable="false">+/-</string>


    <!-- Strings used for Operation Parameters Settings Card-->

    <string name="maxRakeRPMTitle">Maximum Rake RPM</string>
    <string name="minRakeHeightTitle">Minimum Rake Height</string>
    <string name="coefficientRPMTitle">RPM Coefficient</string>
    <string name="coefficientHeightTitle">Height Coefficient</string>
    <string name="safetyValueTitle"> Safety Values</string>
    <string name="optimizationValueTitle"> Optimization Values</string>

    <!-- Strings used for Wheel Radius Parameters Settings Card-->

    <string name="rakeRadiusTitle">Rake Head Radius</string>
    <string name="wheelRadiusTitle">Harvester Wheel Radius</string>
    <string name="wheelParametersTitle">Wheel Values</string>

    <!-- Strings used for Menus -->

    <string name="backButtonTitle">Back Button</string>
    <string name="settingsTitle">Settings</string>
    <string name="notificationTitle">Notifications</string>
    <string name="homeButtonText">Home</string>


    <!-- Extra Strings -->
    <string name="numberHint">Enter a number</string>


    <!--  BleActivity strings -->
    //todo add translation
    <string name="Bluetooth_Functionality" translatable="false">Bluetooth Functionality</string>
    <string name="btn_start_scan_text" translatable="false">Start Scan</string>
    <string name="tw_scan_results_title" translatable="false">Scan Results</string>
    <string name="ble_permission_rationale" translatable="false">This app needs to access bluetooth and location in order to scan for BLE devices.</string>
    <string name="ble_permissions_denied_message" translatable="false">Some permissions were not granted, please grant them and try again</string>

    <!-- Strings used for Optimal Operation Card-->
    <string name="optimalOperationTitle">Optimal Operation</string>
    <string name="optimalRakeHeight">Optimal Rake Height</string>
    <string name="optimalRakeRPM">Optimal Rake RPM</string>
    <string name="currentOperationTitle">Current Operation</string>
    <string name="currentSpeed">Speed</string>
    <string name="currentBushHeight">Bush Height</string>


    <!-- Strings used for Speedometer-->
    <string name="currentRPMTitle">Current RPM</string>
    <string name="speedometerTitle">Speedometer</string>

    <!-- Strings used for Height Gauge-->
    <string name="currentHeightTitle">Current Rake Height</string>
    <string name="heightBarTitle">Rake Height Gauge Bar</string>

    <!-- Strings for Notifications-->
    <string name="noNotificationText">No notifications yet :(</string>
    <string name="maxRPMReachedNotification">WARNING: Current RPM is greater than maximum RPM!</string>
    <string name="maxRPMDisplayedReachedNotification">WARNING: Current RPM is greater than maximum RPM Displayed!</string>
    <string name="rpmBelowZeroNotification">ERROR: Current RPM is below zero, please refer to user manual!</string>
    <string name="maxHeightReachedNotification">WARNING: Current rake height is greater than maximum height!</string>
    <string name="minHeightReachedNotification">"WARNING: Current rake height is under/or equal to minimum height!"</string>
    <string name="heightBelowZeroNotification">"ERROR: Current rake height is below zero, please refer to user manual!"</string>
    <string name="startedRecordingNotification">Started Recording Data.</string>
    <string name="stoppedRecordingNotification">Stopped Recording Data.</string>
    <string name="maxInputNotification">WARNING: Input: %1$.2f for %2$s not saved. Please enter a number smaller than %3$s</string>
    <string name="maxInputFloatNotification">WARNING: Input: %1$.2f for %2$s not saved. Please enter a number smaller than %3$s</string>
    <string name="safetyValueGreaterThanDisplayValueNotification">"WARNING: Input: %1$.2f for %2$s is greater than Display Value."</string>
    <string name="rangeOutOfBoundsNotification">"WARNING: Input: %1$.2f for %2$s makes optimal values out of bounds of viewing area."</string>
    <string name="notDivisibleByFiveNotification">"WARNING: Input: %1$d for %2$s is not divisible by 5. Please enter a number divisible by 5 for easy viewing."</string>
    <string name="inputBelowFiveNotification">"WARNING: Input: %1$.2f for %2$s is greater than 5. Please enter a number less than 5."</string>
    <string name="bluetoothDeviceConnectedNotificationToast">Bluetooth Device: %1$s connected.</string>
    <string name="bluetoothDeviceDisconnectedNotificationToast">Bluetooth Device: %1$s disconnected.</string>
    <string name="displayedValueLessThanSafetyValueNotification">WARNING: Input: %1$.2f for %2$s is less than the safety value saved. This can cause unwanted behavior with the current value animations on the home screen.</string>



    <!-- Strings for Toasts-->
    <string name="maximumValueToast">Input should not exceed %1$s.</string>
    <string name="safetyValueGreaterThanMaximumDisplayedValueToast">Safety Value Greater Than Maximum Displayed Value.</string>
    <string name="notDivisibleByFiveToast">Please enter a number divisible by 5.</string>
    <string name="inputBelowFiveToast"> Please enter a number less than 5.</string>
    <string name="rangeOutOfBoundsToast">Optimal range input makes optimal values out of bounds of viewing area.</string>
    <string name="displayedValueLessThanSafetyValueToast">The display value entered is less than the safety value saved.</string>
</resources>