<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/bell"
        android:title="@string/notificationTitle"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/gear"
        android:title="@string/settingsTitle"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/configurationSettings"
                android:title="@string/configurationPageTitle"
                android:orderInCategory="1"/>

            <item
                android:id="@+id/accessibilitySettings"
                android:title="@string/accessibilityPageTitle"
                android:orderInCategory="2"/>

            <item
                android:id="@+id/bluetoothBLE"
                android:title="@string/Bluetooth_Functionality"
                android:orderInCategory="3"/>
        </menu>

    </item>

</menu>