<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueGrey"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:menu="@menu/settings_menu"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <TextView
            android:id="@+id/accessibilitySettingsTitle"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/accessibilityPageTitle"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:background="#DADBDC"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSizeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/textSizeTitle"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/textSizeSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/languageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/languageTitle"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:entries="@array/languageArray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/unitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/unitSystemTitle"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/unitLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/unitMetricTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/metric"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/unitSwitch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:id="@+id/unitImperialTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/imperial"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/colorSchemeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/colorSchemeTitle"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/colorSchemeSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:background="@color/white"
                android:entries="@array/colorSchemeArray"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
